feat: 完善存储功能 + JavaCV 全景拼接替换 Python 服务
后端:
- 新增 SpacesController / SpaceService 实现服务端空间 CRUD (JSON 文件持久化)
- 新增 UploadController.uploadAudio 音频上传端点
- 新增 OpenCVService 基于 JavaCV 全景拼接 (替代 Python Flask 服务)
- 重写 OpenCVController 移除 Python 依赖
- 修复 WebConfig 编译问题
- 更新 application.yaml 移除 opencv.service-url

前端:
- loader.js 新增后端 API 集成 (fetch/sync/delete)
- SpaceEditor 音频上传改为后端 API (不再用 DataURL)
- main.js CRUD 操作同步到后端 + 改进错误提示
- 添加 pom.xml JavaCV 依赖 (opencv + windows-x86_64)